migrate off takari-lifecycle